fix alignment

--- a/projects/plugins/jetpack/extensions/blocks/subscriptions/view.scss
+++ b/projects/plugins/jetpack/extensions/blocks/subscriptions/view.scss
@@ -118,3 +118,11 @@
 		}
 	}
 }
+
+#subscribe-link {
+	text-align: center;
+
+	a {
+		width: auto;
+	}
+}
